@@ -44,6 +44,7 @@ Thanks to...
     Hakan
     Lorenzo Gabriele
     Jörg Hohwiller
+    Igor Khromov
     Thomas Leytrick
     Li Haoyi
     Li Rh
@@ -53,6 +54,7 @@ Thanks to...
     MichaelMih
     Horacio Miranda
     Leona Nezvalova
+    Bartosz Radaczyński
     Bernhard E. Reiter
     Tobias Roeser
     Michele Rossi
